fix:Se modifica Barra de navegación

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
             </div>
             <div class="Barra-buscar">
                 <nav>
-                    <input type="text" placeholder="Buscar">
+                    <input type="text" placeholder="Buscar porductos, marcas y más..." class="Buscar">
                 </nav>
             </div>
             <div class="Suscripciones">
-                <button>Disney+ Star+ incluidos</button>
-                <button for="text">Suscribete a meli por $99</button>
+                <button class="plus">Disney+ Star+</button>
+                <button class="meli">Suscribete a meli por $99</button>
             </div>
             <div class="Codigo-postal">
                 <a href="https://www.google.com/">
-                    <p><b>Ingresa tu código postal</b></p>
+                    <button class="CP">Ingresa tu código postal</button>
                 </a>
             </div>
             <div class="Listado">
