feat:Se agrega seccion main

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="Suscripciones">
                 <button class="plus">Disney+ Star+</button>
-                <button class="meli">Suscribete a meli por $99</button>
+                <button class="meli">Suscribete a meli+ por $99</button>
             </div>
             <div class="Codigo-postal">
                 <a href="https://www.google.com/">
@@ -46,13 +46,76 @@
                 </ul>
             </div>               
                 <div class="Inicio-sesion">
-                    <a href="https://www.google.com/">Crea tu cuenta</a>
-                    <a href="https://www.google.com/">Ingresa</a>
-                    <a href="https://www.google.com/">Mis compras</a>
-                    <a href="https://www.google.com/">&#128722</a>
+                    <ul class="Ingresar-sesion">
+                        <li>
+                            <a href="https://www.google.com/">Crea tu cuenta</a>
+                        </li>
+                        <li>
+                            <a href="https://www.google.com/">Ingresa</a>
+                        </li>
+                        <li>
+                            <a href="https://www.google.com/">Mis compras</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
     </header>
+    <main>
+        <section class="Botones">
+            <div class="Ofertas-full">
+                <a href="https://www.google.com/">
+                    <button id="Ofertas-full">
+                        <img src="./assets/rayo.png" class="rayo">
+                    </button>
+                </a>
+            </div>
+            <div class="Ofertas-dia">
+                <a href="https://www.google.com/">
+                    <button id="Ofertas-dia">SOLO POR HOY</button>
+                </a>
+            </div>
+            <div class="Audifonos">
+                <a href="https://www.google.com/">
+                    <button id="Audifonos">
+                        <img src="./assets/audifonos.png" class="Audifonos-img">
+                    </button>
+                </a>
+            </div>
+            <div class="Mochilas">
+                <a href="https://www.google.com/">
+                    <button id="Mochilas">
+                        <img src="./assets/mochila.png">
+                    </button>
+                </a>
+            </div>
+            <div class="Llegan-en">
+                <a href="https://www.google.com/">
+                    <button id="Llegan-en">24</button>
+                </a>
+            </div>
+            <div class="Meses">
+                <a href="https://www.google.com/">
+                    <button id="Meses">
+                        <img src="./assets/tarjeta.png" class="tarjeta">
+                    </button>
+                </a>
+            </div>
+            <div class="Productos">
+                <a href="https://www.google.com/">
+                    <button id="Productos">
+                        <img src="./assets/trofeo.png" class="trofeo">
+                    </button>
+                </a>
+            </div>
+            <div class="Envio-gratis">
+                <a href="https://www.google.com/">
+                    <button id="Envio-gratis">
+                        <img src="./assets/camion.png" class="camion">
+                    </button>
+                </a>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
