feat:Se agrega main

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                     </button>
                 </a>
             </div>
+            
             <div class="Ofertas-dia">
                 <a href="https://www.google.com/">
                     <button id="Ofertas-dia">SOLO POR HOY</button>
@@ -114,6 +115,94 @@
                         <img src="./assets/camion.png" class="camion">
                     </button>
                 </a>
+            </div>
+        </section>
+        <section id="img-full-week">
+                <img src="./assets/full-week.png" class="full-week">
+        </section>
+        <section class="contenedor-1">
+            <div class="titulo">
+                <h2>LOS MÁS BUSCADOS</h2>
+            </div>
+            <div>
+                <div class="div-1">
+                    <div> <a href="https://www.google.com/" target="_self">
+                        <div> <img src="./assets/celulares.png" alt="Celulares" class="img-celulares">
+                            <div class="titulo"> 
+                                <h3>CELULARES</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div> <a href="https://www.google.com/" target="_self">
+                        <div> <img src="./assets/moda.png" alt="Moda" class="img-celulares">
+                            <div class="titulo">
+                                <h3>MODA</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div> <a href="https://www.google.com/" target="_self">
+                        <div> <img src="./assets/hogar.png" alt="HOGAR" class="img-celulares">
+                            <div class="titulo">
+                                <h3>HOGAR</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="div-1">
+                    <div> <a href="https://www.google.com/" target="_self">
+                        <div> <img src="./assets/computacion.png" alt="Computadora" class="img-celulares">
+                            <div class="titulo">
+                                <h3>COMPUTACIÓN</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div> <a href="https://www.google.com/" target="_self">
+                        <div> <img src="./assets/tv.png" alt="TV" class="img-celulares">
+                            <div class="titulo">
+                                <h3>TV Y AUDIO</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div> <a href="https://www.google.com/" target="_self">
+                        <div> <img src="./assets/herramientas.png" alt="Caja-de-herramientas" class="img-celulares">
+                            <div class="titulo">
+                                <h3>HERRAMIENTAS</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="contenedor-1">
+            <div class="titulo">
+                <h2>LOS FAVORITOS</h2>
+            </div>
+            <div>
+                <div class="div-1">
+                    <div> <a href="https://www.google.com/" target="_self">
+                        <div> <img src="./assets/deportes.png" alt="Deportes" class="img-celulares">
+                            <div class="titulo">
+                                <h3>DEPORTES</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div> <a href="https://www.google.com/" target="_self">
+                        <div> <img src="./assets/electrohogar.png" alt="Cafetera" class="img-celulares">
+                            <div class="titulo">
+                                <h3>ELECTROHOGAR</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div> <a href="https://www.google.com/" target="_self">
+                        <div> <img src="./assets/juguetes.png" alt="Oso-de-peluche" class="img-celulares">
+                            <div class="titulo">
+                                <h3>JUGUETES</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
