feat:Se termina sección de categorias

--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
                     </button>
                 </a>
             </div>
-            
             <div class="Ofertas-dia">
                 <a href="https://www.google.com/">
                     <button id="Ofertas-dia">SOLO POR HOY</button>
@@ -115,7 +114,7 @@
                         <img src="./assets/camion.png" class="camion">
                     </button>
                 </a>
-            </div>
+            </div> 
         </section>
         <section id="img-full-week">
                 <img src="./assets/full-week.png" class="full-week">
@@ -175,7 +174,7 @@
                 </div>
             </div>
         </section>
-        <section class="contenedor-1">
+        <section class="contenedor-2">
             <div class="titulo">
                 <h2>LOS FAVORITOS</h2>
             </div>
@@ -199,6 +198,55 @@
                         <div> <img src="./assets/juguetes.png" alt="Oso-de-peluche" class="img-celulares">
                             <div class="titulo">
                                 <h3>JUGUETES</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="div-1">
+                    <div> <a href="https://www.google.com/" target="_self">
+                        <div> <img src="./assets/vehiculos.png" alt="Llanta" class="img-celulares">
+                            <div class="titulo">
+                                <h3>ACC VEHÍCULOS</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div> <a href="https://www.google.com/" target="_self">
+                        <div> <img src="./assets/gaming.png" alt="Persona-con-lentes-vr" class="img-celulares">
+                            <div class="titulo">
+                                <h3>GAMING</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div> <a href="https://www.google.com/" target="_self">
+                        <div> <img src="./assets/bebes.png" alt="Bebé" class="img-celulares">
+                            <div class="titulo">
+                                <h3>BEBÉS</h3>
+                            </div>
+                        </div>
+                </div>
+            </div>
+            <div>
+                <div class="div-1">
+                    <div> <a href="https://www.google.com/" target="_self">
+                        <div> <img src="./assets/mascotas.png" alt="Perro-y-gato" class="img-celulares">
+                            <div class="titulo">
+                                <h3>MASCOTAS</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div> <a href="https://www.google.com/" target="_self">
+                        <div> <img src="./assets/camara.png" alt="Camara" class="img-celulares">
+                            <div class="titulo">
+                                <h3>CÁMARAS Y ACCESORIOS</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div> <a href="https://www.google.com/" target="_self">
+                        <div> <img src="./assets/belleza.png" alt="Mujer-sonriendo" class="img-celulares">
+                            <div class="titulo">
+                                <h3>BELLEZA</h3>
                             </div>
                         </div>
                     </div>
